--- a/app/server/.env.example
+++ b/app/server/.env.example
@@ -1,15 +1,15 @@
 NODE_ENV=development
-MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/fitflow?retryWrites=true&w=majority
-JWT_SECRET=your-secret-key-here
+MONGODB_URI=mongodb+srv://<username>:<password>@<cluster>.mongodb.net/<database>
+JWT_SECRET=<your-jwt-secret>
 JWT_EXPIRE=30d
 PORT=5000
-MISTRAL_API_KEY=your-mistral-api-key-here
+MISTRAL_API_KEY=<your-mistral-api-key-here>
 
 # SMTP Configuration for Password Reset
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
 SMTP_USER=your-email@gmail.com
-SMTP_PASS=your-app-password
+SMTP_PASS=<your-app-password>
 SMTP_FROM=FitFlow <noreply@fitflow.com>
 
 # Frontend URL 
